# 3.ThucTheNgay

./: .gitignore  README.md  Slide_1.pptx  Slide_1.template.json  environment.yml  pyproject.toml  run_ubuntu.sh  run_windows.bat  run_windows.ps1  session-handoff-2026-05-24.md
.claude/: settings.local.json
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-05-23-163752.md
_bmad-output/implementation-artifacts/: 1-1-code-review-acceptance-auditor-prompt.md  1-1-code-review-blind-hunter-prompt.md  1-1-code-review-edge-case-hunter-prompt.md  1-1-code-review-rerun-acceptance-auditor-prompt.md  1-1-code-review-rerun-blind-hunter-prompt.md  1-1-code-review-rerun-edge-case-hunter-prompt.md  1-1-initialize-application-scaffold-and-quality-tooling.md  1-1-initialize-application-scaffold-and-quality-tooling.validation-report.md  1-2-define-core-pydantic-models.md  1-2-define-core-pydantic-models.validation-report.md  1-3-load-and-validate-project-config.md  1-4-select-project-paths-in-setup-mode.md  1-5-create-and-manage-workspace-structure.md  1-6-persist-composition-status-and-review-state.md  1-7-persist-validation-summary-and-revalidation-state.md  2-5-run-ingestion-as-progress-job.md  (+32 more)
examples/: config.example.json  config.json
scripts/: copy_intersecting_geotiffs.py  extract_pptx_template_metadata.py  generate_config_from_geojson.py  generate_template_metadata.py
webapp_geojson/: README.md  app.js  geojson-features-2026-05-25T09-46-28.geojson  index.html  process_geojson.py  styles.css
(+270 files in other folders)
